# deeplearning

./: README.md  README_CRASH_COURSE.md
articles/: README.md  pyproject.toml
articles/articles/: crew.py  main.py
articles/articles/config/: agents.yaml  tasks.yaml
automate-event-planning/: README.md  marketing_report.md  pyproject.toml  venue_details copy 2.json  venue_details copy.json  venue_details.json
automate-event-planning/automate_event_planning/: crew.py  main.py
automate-event-planning/automate_event_planning/config/: agents.yaml  tasks.yaml
automate-event-planning/automate_event_planning/models/: venue_details.py
customer-outreach-campaign/: README.md  pyproject.toml
customer-outreach-campaign/customer_outreach_campaign/: crew.py  main.py
customer-outreach-campaign/customer_outreach_campaign/config/: agents.yaml  tasks.yaml
customer-outreach-campaign/customer_outreach_campaign/tools/: senitment_analysis_tool.py
customer-support-automation/: README.md  pyproject.toml
customer-support-automation/customer_support_automation/: crew.py  custom_model.py  main.py
customer-support-automation/customer_support_automation/config/: agents.yaml  tasks.yaml
financial-analysis/: README.md  pyproject.toml
financial-analysis/financial_analysis/: crew.py  main.py
financial-analysis/financial_analysis/config/: agents.yaml  tasks.yaml
research/: LinuxPlusGPU.md  TrainingModels.md
setup/: Llama2Modelfile  Llama370bModelfile  Llama3Modelfile  MistralModelfile  MixtralModelfile  OpenhermesModelfile  create-llama2-model-file.sh  create-llama3-70b-model-file.sh  create-llama3-model-file.sh  create-mistral-model-file.sh  create-mixtral-model-file.sh  create-openhermes-model-file.sh
stacks-automation-experiment1/: .gitignore  README.md  pyproject.toml
stacks-automation-experiment1/stacks_automation_experiment1/: crew.py  main.py
stacks-automation-experiment1/stacks_automation_experiment1/config/: agents.yaml  tasks.yaml
tailor-job-applications/: README.md  pyproject.toml
tailor-job-applications/db/: chroma.sqlite3
tailor-job-applications/tailor_job_applications/: crew.py  main.py
tailor-job-applications/tailor_job_applications/config/: agents.yaml  tasks.yaml
