[tool.poetry]
name = "customer_outreach_campaign"
version = "0.1.0"
description = ""
authors = ["Mike Cohen <mjoecohen@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<=3.13"
crewai = "^0.30.11"
ipython = "^8.24.0"
langchain = "^0.1.20"
crewai-tools = "^0.2.6"

[tool.poetry.scripts]
customer_outreach_campaign = "customer_outreach_campaign.main:run"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
