[tool.poetry]
name = "customer_support_automation"
version = "0.1.0"
description = ""
authors = ["Mike Cohen <mjoecohen@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<=3.13"
crewai = {extras = ["tools"], version = "^0.30.11"}
ipython = "^8.24.0"
langchain = "^0.1.20"

[tool.poetry.scripts]
customer_support_automation = "customer_support_automation.main:run"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
