[tool.poetry]
name = "financial_analysis"
version = "0.1.0"
description = ""
authors = ["Mike Cohen <mjoecohen@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<=3.13"
crewai = {extras = ["tools"], version = "^0.30.11"}
ipython = "^8.24.0"

[tool.poetry.scripts]
financial_analysis = "financial_analysis.main:run"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
