[tool.poetry]
name = "stacks_automation_experiment1"
version = "0.1.0"
description = ""
authors = ["Mike Cohen <mjoecohen@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<=3.13"
crewai = {extras = ["tools"], version = "^0.30.11"}
ipython = "^8.24.0"
langchain = "^0.1.20"
pydantic = "^2.7.1"
flask = "^3.0.3"

[tool.poetry.scripts]
start-flask = "stacks_automation_experiment1.main:run"
#start-flask = "app:run"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
